Update Using Jupyter notebooks.ipynb

--- a/Using Jupyter notebooks.ipynb
+++ b/Using Jupyter notebooks.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# What have I done so far?   \n",
-    "I have created a dictionary named days_counts where the key is the number of the day of the week and the value is the accumultated number of births that day   \n",
+    "I have created a dictionary named days_counts where the key is the number of the day of the week and the value is the accumulated number of births that day   \n",
     "\n",
     "1. **day_of_week**:  1 is Monday, 2 is tuesday, etc. \n",
     "2. **births**: number of births. \n"
